[gd_scene load_steps=4 format=2]

[ext_resource path="res://Navegacao.gd" type="Script" id=1]

[sub_resource type="AtlasTexture" id=1]

[sub_resource type="Theme" id=2]

[node name="Navegacao" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 14.0
margin_top = 239.0
margin_right = 692.0
margin_bottom = 287.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="Mapa" type="Button" parent="HBoxContainer"]
margin_right = 166.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -462, -160 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.792157, 0.0705882, 0.180392, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
action_mode = 0
text = "MAPA"
icon = SubResource( 1 )

[node name="IMC" type="Button" parent="HBoxContainer"]
margin_left = 170.0
margin_right = 337.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -462, -160 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.792157, 0.0705882, 0.180392, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "IMC"

[node name="Fatorial" type="Button" parent="HBoxContainer"]
margin_left = 341.0
margin_right = 507.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -462, -160 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.792157, 0.0705882, 0.180392, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FATORIAL"

[node name="Megasena" type="Button" parent="HBoxContainer"]
margin_left = 511.0
margin_right = 678.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -462, -160 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.792157, 0.0705882, 0.180392, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MEGASENA"
icon_align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Contador" type="Label" parent="."]
margin_left = 623.0
margin_top = 6.0
margin_right = 696.0
margin_bottom = 56.0
theme = SubResource( 2 )
text = "1111"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[connection signal="pressed" from="HBoxContainer/Mapa" to="." method="_on_Mapa_pressed"]
[connection signal="pressed" from="HBoxContainer/IMC" to="." method="_on_IMC_pressed"]
[connection signal="pressed" from="HBoxContainer/Fatorial" to="." method="_on_Fatorial_pressed"]
[connection signal="pressed" from="HBoxContainer/Megasena" to="." method="_on_Megasena_pressed"]
